--- a/PrimeMath.Tests/PrimeMath.Tests.csproj
+++ b/PrimeMath.Tests/PrimeMath.Tests.csproj
@@ -42,6 +42,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="PrimeMathTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
