--- a/PrimeMath.Tests/PrimeMath.Tests.csproj
+++ b/PrimeMath.Tests/PrimeMath.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PrimeMath\PrimeMath.csproj">
