--- a/PrimeMath/PrimeMath.csproj
+++ b/PrimeMath/PrimeMath.csproj
@@ -49,6 +49,7 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="PrimeMath.cs" />
+    <Compile Include="PrimeState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
